[Feat] 유저 정보 토큰 형식 이용으로 수정