@@ -13,10 +13,7 @@ import footlogger.footlog.repository.SaveRepository;
 import footlogger.footlog.repository.UserRepository;
 import footlogger.footlog.utils.NaverBlog;
 import footlogger.footlog.utils.RecommendSystem;
-import footlogger.footlog.web.dto.response.CourseDetailDTO;
-import footlogger.footlog.web.dto.response.CourseResponseDTO;
-import footlogger.footlog.web.dto.response.NaverBlogDTO;
-import footlogger.footlog.web.dto.response.PreferenceRequestBody;
+import footlogger.footlog.web.dto.response.*;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.json.JSONArray;
@@ -43,44 +40,62 @@ public class CourseService {
     private final NaverBlogConverter naverBlogConverter;
     private final LogRepository logRepository;
     private final RecommendSystem recommendSystem;
+    private final SaveService saveService;
 
     //지역기반으로 코스를 받아 옴
-    public List<CourseResponseDTO> getByAreaName(String areaName, Long userId) {
+    public List<CourseResponseDTO> getByAreaName(String token, String areaName) {
+        User user = userRepository.findByAccessToken(token)
+                .orElseThrow(() -> new IllegalArgumentException("유저를 찾을 수 없습니다."));
+
         int areaCode = areaConverter.getCodeByAreaName(areaName);
         List<Course> courses = courseRepository.findByAreaCode(areaCode);
 
+
+
         return courses.stream()
-                .map(course -> courseConverter.toResponseDTO(course, userId))
+                .map(course -> courseConverter
+                        .toResponseDTO(course, saveService.getSaveStatus(course.getId(), user.getId())))
                 .collect(Collectors.toList());
     }
 
     //클릭 시 상세 조회
-    public CourseDetailDTO getCourseDetail(Long courseId, Long userId) {
-        Course course = courseRepository.findById(courseId).orElse(null);
+    public CourseDetailDTO getCourseDetail(String token, Long courseId) {
+        User user = userRepository.findByAccessToken(token)
+                .orElseThrow(() -> new IllegalArgumentException("유저를 찾을 수 없습니다."));
+        Course course = courseRepository.findById(courseId)
+                .orElseThrow(() -> new IllegalArgumentException("코스를 찾을 수 없습니다."));
+        Boolean isSave = saveService.getSaveStatus(course.getId(), user.getId());
 
-        return courseConverter.toDetailDTO(course, userId);
+        return courseConverter.toDetailDTO(course, isSave);
     }
 
     //클릭 때 마다 코스를 저장하고 취소하는 토글 기능
-    public void toggleSaveCourse(Long courseId, Long userId) {
-        Optional<SaveCourse> saveCourse = saveRepository.findByCourseIdAndUserId(courseId, userId);
+    public SaveStatusDTO toggleSaveCourse(String token, Long courseId) {
+        User user = userRepository.findByAccessToken(token)
+                .orElseThrow(() -> new IllegalArgumentException("유저를 찾을 수 없습니다."));
+        Course course = courseRepository.findById(courseId)
+                .orElseThrow(() -> new IllegalArgumentException("코스를 찾을 수 없습니다."));
+        Optional<SaveCourse> saveCourse = saveRepository.findByCourseIdAndUserId(courseId, user.getId());
 
         //존재할 경우 테이블에서 삭제
         if (saveCourse.isPresent()) {
             saveRepository.delete(saveCourse.get());
         } else { //존재하지 않을 경우 추가
-            Course course = courseRepository.findById(courseId).orElse(null);
-            User user = userRepository.findById(userId).orElse(null);
-
             SaveCourse addSaveCourse = new SaveCourse(null, course, user);
             saveRepository.save(addSaveCourse);
         }
+
+        return SaveStatusDTO.builder()
+                .isSave(saveService.getSaveStatus(courseId, user.getId()))
+                .build();
     }
 
     //네이버 블로그 포스팅 가져오기
     public List<NaverBlogDTO> getNaverBlogs(Long courseId) {
 
-        Course course = courseRepository.findById(courseId).orElse(null);
+        Course course = courseRepository.findById(courseId)
+                .orElseThrow(() -> new IllegalArgumentException("코스를 찾을 수 없습니다."));
+
         String courseName = course.getName();
         List<NaverBlogDTO> postDTOs = new ArrayList<>();
 
@@ -99,9 +114,12 @@ public class CourseService {
     }
 
     //코스 완주 할 경우 저장
-    public Long completeCourse(Long courseId, Long userId) {
-        Course course = courseRepository.findById(courseId).orElse(null);
-        User user = userRepository.findById(userId).orElse(null);
+    public Long completeCourse(String token, Long courseId) {
+        User user = userRepository.findByAccessToken(token)
+                .orElseThrow(() -> new IllegalArgumentException("유저를 찾을 수 없습니다."));
+        Course course = courseRepository.findById(courseId)
+                .orElseThrow(() -> new IllegalArgumentException("코스를 찾을 수 없습니다."));
+
         Log log = Log.builder()
                 .course(course)
                 .user(user)
@@ -127,7 +145,8 @@ public class CourseService {
         saveCourses(courses, user);
 
         return courses.stream()
-                .map(course -> courseConverter.toResponseDTO(course, user.getId()))
+                .map(course -> courseConverter
+                        .toResponseDTO(course, saveService.getSaveStatus(course.getId(), user.getId())))
                 .collect(Collectors.toList());
     }
 
@@ -146,7 +165,8 @@ public class CourseService {
 
         return saveRepository.findByUserId(user.getId()).stream()
                 .map(SaveCourse::getCourse)
-                .map(course -> courseConverter.toResponseDTO(course, user.getId()))
-                .toList();
+                .map(course -> courseConverter
+                        .toResponseDTO(course, saveService.getSaveStatus(course.getId(), user.getId())))
+                .collect(Collectors.toList());
     }
 }
